# Angry_Birds

./: .gitignore  CMakeLists.txt  Doxyfile  Meeting-notes.md  README.md  tests[1]_include.cmake
assets/levels/: README.md  level1.lvl  level2.lvl  level3.lvl
doc/: readme.md
libs/: readme.md
src/: game.hpp  includes.hpp  level.hpp  main.cpp  player.hpp  slingshot.hpp  sound_manager.hpp
src/UI/: ui_elements.hpp
src/game/: game.hpp
src/objects/: bird.hpp  block.hpp  get_object_defaults.hpp  ground.hpp  object.hpp  object_defs.hpp  pig.hpp  special_birds.hpp
src/physics/: bird.hpp  block.hpp  object.hpp  object_defs.hpp  pig.hpp  special_birds.hpp
src/visual/: button.hpp  buttons.hpp  game_render.hpp  game_text.hpp  gui.hpp  texture_manager.hpp
tests/: tests.cpp
